--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -112,7 +112,7 @@
 
     &--1 {
         background-image: linear-gradient(
-        // to right bottom,
+        to right bottom,
         rgba($color-secondary-light, 0.85),
         rgba($color-secondary-dark, 0.85)
       );
@@ -192,14 +192,12 @@
       height: auto;
       position: relative;
       box-shadow: none;
-      
 
       &--back {
         transform: rotateY(0);
-        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-        
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); 
       }
-
+    }
       &:hover &__side--front {
         transform: rotateY(0);
       }
@@ -207,8 +205,6 @@
       &__details {
         padding: 1rem 3rem;
       }
-
-    }
 
     // BACK SIDE STYLING
 
